# ros-interop

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Jenkinsfile  Makefile  README.md  cmake_install.cmake  package.xml  requirements.txt  setup.py
catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  python_distutils_install.sh  safe_execute_install.cmake  setup_cached.sh  setup_py_interrogation.cmake
catkin_generated/installspace/: interop-msg-extras.cmake  interop-msg-paths.cmake  interop.pc  interopConfig.cmake
catkin_generated/stamps/interop/: _setup_util.py.stamp  package.xml.stamp  setup.py.stamp
cmake/: interop-genmsg-context.py  interop-genmsg.cmake
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: interop.pc
devel/lib/python2.7/dist-packages/interop/: __init__.py
devel/share/interop/cmake/: interop-msg-extras.cmake  interop-msg-paths.cmake  interopConfig.cmake
gtest/: CTestTestfile.cmake  Makefile
launch/: interop.launch
msg/: Color.msg  EmergentTarget.msg  FlyZone.msg  Object.msg  ObjectType.msg  OffAxisTarget.msg  Orientation.msg  QRCTarget.msg  Shape.msg  StandardTarget.msg  Target.msg  TargetType.msg  UTMZone.msg
scripts/: download_mission.py  missions_client.py  objects_server.py  obstacles_client.py  server_info_client.py  targets_server.py  telemetry_client.py
src/interop/: __init__.py  client.py  local_objects.py  local_targets.py  serializers.py
srv/: AddObject.srv  AddTarget.srv  AddTargetImage.srv  DeleteObject.srv  DeleteObjectImage.srv  DeleteTarget.srv  DeleteTargetImage.srv  GetAllObjects.srv  GetAllTargets.srv  GetMissionByID.srv  GetObject.srv  GetObjectCompressedImage.srv  GetObjectImage.srv  GetTarget.srv  GetTargetCompressedImage.srv  GetTargetImage.srv  SetObjectCompressedImage.srv  SetObjectImage.srv  SetTargetCompressedImage.srv  UpdateObject.srv  UpdateTarget.srv
test/: client.test  local_objects.test  local_targets.test  mock_server.py  serializers.test  test_client.py  test_object.py  test_serializers.py  test_target.py  test_targets_directory.py
