<?xml version="1.0"?>
<package>
  <name>interop</name>
  <version>0.1.0</version>
  <description>
    This package provides a ROS client to communicate with AUVSI SUAS'
    Interoperability server.
  </description>

  <maintainer email="mr@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>
  <author email="mr@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- Python dependencies -->
  <run_depend>python-numpy</run_depend>
  <run_depend>python-requests</run_depend>
  <run_depend>python-dateutil</run_depend>
  <run_depend>python-utm-pip</run_depend>

  <export> </export>
</package>
