<?xml version="1.0"?>
<package>
  <name>interop</name>
  <version>0.9.1</version>
  <description>
    ros-interop provides a ROS client to communicate with AUVSI SUAS'
    Interoperability server.
  </description>

  <maintainer email="mr@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>
  <author email="mr@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geographic_msgs</run_depend>

  <!-- Python dependencies -->
  <run_depend>python-numpy</run_depend>
  <run_depend>python-requests</run_depend>
  <run_depend>python-responses-pip</run_depend>
  <run_depend>python-dateutil</run_depend>
  <run_depend>python-imaging</run_depend>

  <!-- Unit tests -->
  <test_depend>rostest</test_depend>

  <export> </export>
</package>
