<?xml version="1.0"?>
<package format="2">
  <name>interop</name>
  <version>0.18.0</version>
  <description>
    Provides a ROS client to communicate with the AUVSI SUAS
    Interoperability server.
  </description>

  <maintainer email="dev@anassinator.com">Anass Al</maintainer>
  <license>GPLv2</license>
  <author email="dev@anassinator.com">Anass Al</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>genmsg</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-dateutil</exec_depend>
  <exec_depend>python-imaging</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-requests</exec_depend>
  <exec_depend>python-responses-pip</exec_depend>
  <exec_depend>python-six</exec_depend>

  <test_depend>rostest</test_depend>

  <export></export>
</package>
